init migration to java26